tests/compilefail17.out
[1mtests/compilefail17.pas:13:8: [0m[1m[91merror:[0m Cannot assign real type to integer
    13 | 	j:=addone(i);